# stream-partition

./: .editorconfig  Cargo.toml  README.md  TESTING.md
.github/workflows/: rust-checks.yml
src/: lib.rs
